tests/ui/unsized-locals/issue-30276.stderr
error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/issue-30276.rs:4:13
   |
LL |     let _x: fn(_) -> Test = Test;
   |             ^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `Test`, the trait `Sized` is not implemented for `[i32]`
note: required because it appears within the type `Test`
  --> $DIR/issue-30276.rs:1:8
   |
LL | struct Test([i32]);
   |        ^^^^
   = note: the return type of a function must have a statically known size

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/issue-30276.rs:4:29
   |
LL |     let _x: fn(_) -> Test = Test;
   |                             ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
   = note: all function arguments must have a statically known size
   = help: unsized fn params are gated as an unstable feature

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
